--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,254 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+% 2024
+@article{zhang2023forecasting,
+  abbr = {Preprint},
+  preview = {backdraft.png},
+  title={Forecasting Backdraft with Multimodal Method: Fusion of Fire Image and Sensor Data},
+  author={Tianhang Zhang and Fangqiang Ding and Zilong Wang and Fu Xiao and Chris Xiaoxuan Lu and Xinyan Huang},
+  year={2024},
+  journal={Engineering Applications of Artificial Intelligence},
+  arxiv = {2309.09737},
 }
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{pan2023moving,
+  abbr = {Preprint},
+  preview = {ratrack.png},
+  title={RaTrack: Moving Object Detection and Tracking with 4D Radar Point Cloud}, 
+  author={Zhijun Pan and Fangqiang Ding and Hantao Zhong and Chris Xiaoxuan Lu},
+  year={2023},
+  journal={CoRR},
+  arxiv = {2309.09737},
+  preprint = {true},
 }
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{DBLP:journals/corr/abs-2306-17010,
+  author       = {Fangqiang Ding and
+                  Zhen Luo and
+                  Peijun Zhao and
+                  Chris Xiaoxuan Lu},
+  title        = {milliFlow: Scene Flow Estimation on mmWave Radar Point Cloud for Human
+                  Motion Sensing},
+  journal      = {CoRR},
+  arxiv        = {2306.17010},
+  year         = {2023},
+  preprint     = {true},
+  preview = {milliflow.png},
+  abbr         = {Preprint},
 }
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{DBLP:journals/corr/abs-2303-00462,
+  author    = {Fangqiang Ding and
+               Andras Palffy and
+               Dariu M. Gavrila and
+               Chris Xiaoxuan Lu},
+  title     = {Hidden Gems: 4D Radar Scene Flow Learning Using Cross-Modal Supervision},
+  booktitle   = {{IEEE} Conference on Computer Vision and Pattern Recognition},
+  year      = {2023},
+  arxiv    = {2303.00462},
+  code = {https://github.com/Toytiny/CMFlow},
+  website = {https://toytiny.github.io/publication/23-cmflow-cvpr/index.html},
+  video = {https://www.youtube.com/watch?v=PjKgznDizhI},
+  selected = {true},
+  abbr = {CVPR'23},
+  preview = {cmflow.png},
+  award = {Selected as Highlight (top 10%)}
 }
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{DBLP:journals/tmc/LiFDYL23,
+  author       = {Bowen Li and
+                  Changhong Fu and
+                  Fangqiang Ding and
+                  Junjie Ye and
+                  Fuling Lin},
+  title        = {All-Day Object Tracking for Unmanned Aerial Vehicle},
+  journal      = {{IEEE} Trans. Mob. Comput.},
+  year         = {2023},
+  arxiv        = {2101.08446},
+  preview = {adtrack_2.png},
+  code         = {https://github.com/vision4robotics/ADTrack_v2},
+  video        = {https://www.youtube.com/watch?v=cJMUKF4J38A},
+  abbr         = {TMC}
 }
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+% 2022
+@article{DBLP:journals/corr/abs-2203-01137,
+  author    = {Fangqiang Ding and
+               Zhijun Pan and
+               Yimin Deng and
+               Jianning Deng and
+               Chris Xiaoxuan Lu},
+  title     = {Self-Supervised Scene Flow Estimation with 4D Automotive Radar},
+  journal   = {{IEEE} Robotics Autom. Lett. / IEEE International Conference on Intelligent Robots and Systems},
+  year      = {2022},
+  arxiv    = {2203.01137},
+  selected = {true},
+  preview = {raflow.png},
+  code = {https://github.com/Toytiny/RaFlow},
+  video = {https://www.youtube.com/watch?v=5_iJCZytrxo},
+  website = {https://toytiny.github.io/publication/22-raflow-ral/index.html},
+  abbr = {RA-L/IROS}
 }
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{DBLP:journals/tie/YeFLDAL22,
+  author       = {Junjie Ye and
+                  Changhong Fu and
+                  Fuling Lin and
+                  Fangqiang Ding and
+                  Shan An and
+                  Geng Lu},
+  title        = {Multi-Regularized Correlation Filter for {UAV} Tracking and Self-Localization},
+  journal      = {{IEEE} Trans. Ind. Electron.},
+  year         = {2022},
+  preview = {mrcf.png},
+  pdf    = {https://ieeexplore.ieee.org/abstract/document/9457090},
+  code = {https://github.com/vision4robotics/MRCF-Tracker},
+  video = {https://www.youtube.com/watch?v=XzkreAPynE4},
+  abbr = {TIE}
 }
+@inproceedings{DBLP:conf/icra/0001LYYCD22,
+  author       = {Changhong Fu and
+                  Sihang Li and
+                  Xinnan Yuan and
+                  Junjie Ye and
+                  Ziang Cao and
+                  Fangqiang Ding},
+  title        = {Ad2Attack: Adaptive Adversarial Attack on Real-Time
+                  {UAV} Tracking},
+  booktitle    = {{IEEE} International Conference on Robotics and Automation},
+  year         = {2022},
+  arxiv = {2203.01516},
+  preview = {ad2attack.png},
+  code = {https://github.com/vision4robotics/Ad2Attack},
+  video = {https://www.bilibili.com/video/BV1S44y1b7xC/?spm_id_from=333.999.0.0},
+  abbr = {ICRA'22}
+}
+@ARTICLE{9445732,
+  author={Fu, Changhong and Li, Bowen and Ding, Fangqiang and Lin, Fuling and Lu, Geng},
+  journal={IEEE Geosci. Remote Sens. Mag.}, 
+  title={Correlation Filters for Unmanned Aerial Vehicle-Based Aerial Tracking: A Review and Experimental Evaluation}, 
+  year={2022},
+  pdf = {https://ieeexplore.ieee.org/abstract/document/9445732},
+  code = {https://github.com/vision4robotics/DCFTracking4UAV},
+  video = {https://www.youtube.com/watch?v=LPdmTjt5Nv0},
+  abbr = {GRSM},
+  preview = {grsm.png},
+}
+% 2021
+@article{DBLP:journals/eaai/FuDLJF21,
+  author       = {Changhong Fu and
+                  Fangqiang Ding and
+                  Yiming Li and
+                  Jin Jin and
+                  Chen Feng},
+  title        = {Learning dynamic regression with automatic distractor repression for
+                  real-time {UAV} tracking},
+  journal      = {Eng. Appl. Artif. Intell.},
+  year         = {2021},
+  pdf = {https://www.sciencedirect.com/science/article/pii/S0952197620303560},
+  code = {https://github.com/vision4robotics/DR2Track/tree/master/DR2Track2},
+  video = {https://www.youtube.com/watch?v=49ko4Roexsw},
+  preview = {dr2track.png},
+  abbr = {EAAI}
+}
+@inproceedings{DBLP:conf/icra/Li0DYL21,
+  author       = {Bowen Li and
+                  Changhong Fu and
+                  Fangqiang Ding and
+                  Junjie Ye and
+                  Fuling Lin},
+  title        = {ADTrack: Target-Aware Dual Filter Learning for Real-Time Anti-Dark
+                  {UAV} Tracking},
+  booktitle    = {{IEEE} International Conference on Robotics and Automation},
+  year         = {2021},
+  arxiv = {2106.02495},
+  code = {https://github.com/vision4robotics/ADTrack},
+  preview = {adtrack.png},
+  video = {https://www.youtube.com/watch?v=8ZnGOwoqDZ8},
+  abbr = {ICRA'21}
+}
+@ARTICLE{9565346,
+  author={Fu, Changhong and Jin, Jin and Ding, Fangqiang and Li, Yiming and Lu, Geng},
+  journal={IEEE Trans. Multimed.}, 
+  title={Spatial Reliability Enhanced Correlation Filter: An Efficient Approach for Real-Time UAV Tracking}, 
+  year={2021},
+  pdf = {https://ieeexplore.ieee.org/document/9565346},
+  code = {https://github.com/vision4robotics/SRECF-Tracker/tree/master/SRECF%20(TMM)},
+  video = {https://www.youtube.com/watch?v=4EaLxvz8_Sw},
+  preview = {srecf.png},
+  abbr = {TMM}
+  }
+@inproceedings{DBLP:conf/icra/Zheng0YLD21,
+  author       = {Guangze Zheng and
+                  Changhong Fu and
+                  Junjie Ye and
+                  Fuling Lin and
+                  Fangqiang Ding},
+  title        = {Mutation Sensitive Correlation Filter for Real-Time {UAV} Tracking
+                  with Adaptive Hybrid Label},
+  booktitle    = {{IEEE} International Conference on Robotics and Automation},
+  year         = {2021},
+  arxiv = {2106.08073},
+  preview = {mscf.png},
+  code = {https://github.com/vision4robotics/MSCF-tracker},
+  video = {https://www.youtube.com/watch?v=4EPGBCuatxU},
+  abbr = {ICRA'21}
+}
+% 2020
+@inproceedings{DBLP:conf/cvpr/Li0DHL20,
+  author       = {Yiming Li and
+                  Changhong Fu and
+                  Fangqiang Ding and
+                  Ziyuan Huang and
+                  Geng Lu},
+  title        = {AutoTrack: Towards High-Performance Visual Tracking for {UAV} With
+                  Automatic Spatio-Temporal Regularization},
+  booktitle    = {{IEEE} Conference on Computer Vision and Pattern Recognition},
+  year         = {2020},
+  pdf = {https://openaccess.thecvf.com/content_CVPR_2020/papers/Li_AutoTrack_Towards_High-Performance_Visual_Tracking_for_UAV_With_Automatic_Spatio-Temporal_CVPR_2020_paper.pdf},
+  code = {https://github.com/vision4robotics/AutoTrack},
+  video = {https://www.youtube.com/watch?v=2w8Mophui1k},
+  preview = {autotrack.png},
+  abbr = {CVPR'20}
+}
+@inproceedings{DBLP:conf/iros/Ding00J020,
+  author       = {Fangqiang Ding and
+                  Changhong Fu and
+                  Yiming Li and
+                  Jin Jin and
+                  Chen Feng},
+  title        = {Automatic Failure Recovery and Re-Initialization for Online {UAV}
+                  Tracking with Joint Scale and Aspect Ratio Optimization},
+  booktitle    = {{IEEE} International Conference on Intelligent Robots and Systems},
+  year         = {2020},
+  arxiv = {2008.03915},
+  preview = {jsar.png},
+  code = {https://github.com/vision4robotics/JSAR-Tracker},
+  video = {https://www.youtube.com/watch?v=wNFhkpH6osk},
+  abbr = {IROS'20}
+}
+@inproceedings{DBLP:conf/iros/0001D0J020,
+  author       = {Changhong Fu and
+                  Fangqiang Ding and
+                  Yiming Li and
+                  Jin Jin and
+                  Chen Feng},
+  title        = {DR2Track: Towards Real-Time Visual Tracking for {UAV}
+                  via Distractor Repressed Dynamic Regression},
+  booktitle    = {{IEEE} International Conference on Intelligent Robots and Systems},
+  year         = {2020},
+  arxiv = {2008.03912},
+  preview = {dr2track2.png},
+  code = {https://github.com/vision4robotics/DR2Track/tree/master/DR2Track1},
+  video = {https://www.youtube.com/watch?v=HQz_xIu9XOc},
+  abbr = {IROS'20}
+}
+@inproceedings{DBLP:conf/iros/00030DHP20,
+  author       = {Yiming Li and
+                  Changhong Fu and
+                  Fangqiang Ding and
+                  Ziyuan Huang and
+                  Jia Pan},
+  title        = {Augmented Memory for Correlation Filters in Real-Time {UAV} Tracking},
+  booktitle    = {{IEEE} International Conference on Intelligent Robots and Systems},
+  year         = {2020},
+  arxiv = {1909.10989},
+  preview = {amcf.png},
+  code = {https://github.com/vision4robotics/AMCF-tracker},
+  video = {https://www.youtube.com/watch?v=CGH5o2J1ohI},
+  abbr = {IROS'20}
+ }
