--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 % 2024
 @article{zhang2023forecasting,
-  abbr = {Preprint},
+  abbr = {EAAI},
   preview = {backdraft.png},
   title={Forecasting Backdraft with Multimodal Method: Fusion of Fire Image and Sensor Data},
   author={Tianhang Zhang and Fangqiang Ding and Zilong Wang and Fu Xiao and Chris Xiaoxuan Lu and Xinyan Huang},
