update icra accept

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,13 +11,13 @@
   pdf = {https://pdf.sciencedirectassets.com/271095/1-s2.0-S0952197624X00020/1-s2.0-S0952197624000976/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEAYaCXVzLWVhc3QtMSJHMEUCIQCSp5U55qI7Y%2FP%2FTXBx5WgLwn9SF2BkL6zwplftoAF2LQIgUwcDB3MNyj6i%2BTkV5XO8urddLnheVQzQAIwHWB577%2FYqvAUIv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAFGgwwNTkwMDM1NDY4NjUiDA%2F0gq04h1diiVkoMiqQBUTRxoHwlDzd6K10DZ5QfobRbsT3BmppC8HoWl6a7G5JjrVMUXjRJM2HB8GHOF6Uisq18x4TPxf3%2BcYO3AHXJm5XlVVysC6xOvOliF8cHVVqTBdg3t6YA09EPWegoO%2FMr0lIUN5FRTrXi2WE24Xr9B%2BVWbPtiZSA575Umust3QbMWi9thGH2YsJ54XRHVLJAD2whngiRujUH5shk%2BE%2FTUh6soTAGMPkDYu2NdNVomC2o10%2FzVKu4DiIVLWVkF5VX6DWBW0Zrm6b%2F9GbXk3uwRrABEYJlKOdxbKfy3sECCfAIAd86D1ymLTMWWy8%2FDa7nf01IqBpAGXdQ92d5wHFjHSXm%2BOJSSQS0JB%2Fp78SiE%2FK%2Bic0sPE91mnXjQRSXmNqFivB3zUydNJw9eR3tZuum9NFhbnu286StBHb0PdFJU3ZWQHelxOyuBriJNslerjlxP00hHEsqD6VJpWEhSwna%2BCkRZ%2FoPdgyeQodxEcnfnx7kp%2FDcVNeCf4016PmwdIqOS4gANWVhKrfqNCBlsOsjzCaa2DxQtrgARuCBWFKU6IfESERehQCoyr1jn4RkZYTgKSlA58wOjIHjU5EZVVdF28%2B4C3YVkKy1qAtQSis09NzTETeBgrJUUbMElyHQt16JlsZ1XRMxI89gM%2B0iVpt%2FZO37H%2BxureIwaZCy4tJrA2z7TZ%2FeimbtMu6PsaUtCcY8Yo3FFgzhe7rmAjln%2BCFXkLUYWxtOgBhcAZKqINXGR2NJhWRqnT9WXWwIzfJQeVagFFiJnr0iN3Q6MCAkKIseAgFScpBTe5yE6nQ1UmZlv%2Bl9HPn%2B2lKvqOyQ6Na3dGV%2Bkx3Xysr9pp96n3QKlCZgPvj%2B3uckj5WNyLi5uWyCwhlMMOaU1K0GOrEBuvHkWA12R6g8MdClol5rkzQyCaBGktGjN2YhCRUa3Ku6Smz6x6ztXrwXT2xiRiQUKIWKgjN%2F%2FR%2F%2BjSJNbfcSfhnxIITFs5QnJ8OvH8U8wFkkGBakxmrvxP%2FDfvvHagI51gtss9lS2vBFnh%2FNZLD96eUYeTw%2F8cVaszDoMvBjIiaJYXzzWcNPY1aIk55HijzJuMc6PNFO2B03G%2F6EHzXz1YFA0x7Y6KFoWTgT3yg8oz0o&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240127T151759Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYU7LQNLGD%2F20240127%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=39b565a9938ad0a6c5ae28c07d16fe3b39ed97d4aabc40ba22d1e7fc2bf726a6&hash=25d0629d1fc9f0ac72e431f6014796b0d9ba588d8ed1e9c5542794bc2c77bb93&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0952197624000976&tid=spdf-1f55be60-de0d-40c7-8b84-0be22ef9b703&sid=c86a517723eb114121887a892b6ac7ed13f2gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=05015d550550005950&rr=84c1f7368d5edd7d&cc=gb},
   video = {https://ars.els-cdn.com/content/image/1-s2.0-S0952197624000976-mmc1.mp4}
 }
-@article{pan2023moving,
-  abbr = {Preprint},
+@inproceedings{pan2023moving,
+  abbr = {ICRA},
   preview = {ratrack.png},
   title={RaTrack: Moving Object Detection and Tracking with 4D Radar Point Cloud}, 
   author={Zhijun Pan and Fangqiang Ding and Hantao Zhong and Chris Xiaoxuan Lu},
-  year={2023},
-  journal={CoRR},
+  year={2024},
+  journal={{IEEE} International Conference on Robotics and Automation},
   arxiv = {2309.09737},
   preprint = {true},
 }
