--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
   title={RaTrack: Moving Object Detection and Tracking with 4D Radar Point Cloud}, 
   author={Zhijun Pan and Fangqiang Ding and Hantao Zhong and Chris Xiaoxuan Lu},
   year={2024},
-  journal={{IEEE} International Conference on Robotics and Automation},
+  booktitle={{IEEE} International Conference on Robotics and Automation},
   arxiv = {2309.09737},
   preprint = {true},
 }
