--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
   video = {https://ars.els-cdn.com/content/image/1-s2.0-S0952197624000976-mmc1.mp4}
 }
 @inproceedings{pan2023moving,
-  abbr = {ICRA},
+  abbr = {ICRA'24},
   preview = {ratrack.png},
   title={RaTrack: Moving Object Detection and Tracking with 4D Radar Point Cloud}, 
   author={Zhijun Pan and Fangqiang Ding and Hantao Zhong and Chris Xiaoxuan Lu},
