--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,6 +19,7 @@
   year={2024},
   booktitle={{IEEE} International Conference on Robotics and Automation},
   arxiv = {2309.09737},
+  video = {https://youtu.be/_uSpbxOlLGw},
   code = {https://github.com/LJacksonPan/RaTrack},
   preprint = {true},
 }
