--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,6 +19,7 @@
   year={2024},
   booktitle={{IEEE} International Conference on Robotics and Automation},
   arxiv = {2309.09737},
+  selected = {true},
   video = {https://www.youtube.com/watch?v=IxfyCWyNhfw},
   code = {https://github.com/LJacksonPan/RaTrack},
   preprint = {true},
@@ -64,7 +65,7 @@
   journal      = {{IEEE} Trans. Mob. Comput.},
   year         = {2023},
   arxiv        = {2101.08446},
-  preview = {adtrack_2.png},
+  preview      = {adtrack_2.png},
   code         = {https://github.com/vision4robotics/ADTrack_v2},
   video        = {https://www.youtube.com/watch?v=cJMUKF4J38A},
   abbr         = {TMC}
