--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
 % 2024
+@article{ding2024thermohands,
+  author       = {Fangqiang Ding and
+                  Yunzhou Zhu and
+                  Xiangyu Wen and
+                  Chris Xiaoxuan Lu},
+  title        = {ThermoHands: A Benchmark for 3D Hand Pose Estimation from Egocentric Thermal Image},
+  journal      = {CoRR},
+  arxiv        = {2403.09871},
+  year         = {2024},
+  preprint     = {true},
+  preview = {thermohands.png},
+  abbr         = {Preprint},
+}
 @article{zhang2023forecasting,
   abbr = {EAAI},
   preview = {backdraft.png},
