--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
   abbr = {ICRA'24},
   preview = {ratrack.png},
   title={RaTrack: Moving Object Detection and Tracking with 4D Radar Point Cloud}, 
-  author={Fangqiang Ding and Zhijun Pan and Hantao Zhong and Chris Xiaoxuan Lu},
+  author={Zhijun Pan and Fangqiang Ding and Hantao Zhong and Chris Xiaoxuan Lu},
   year={2024},
   booktitle={{IEEE} International Conference on Robotics and Automation},
   arxiv = {2309.09737},
