--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,20 @@
 ---
 ---
 % 2024
+@article{ding2024radarocc,
+  author       = {Fangqiang Ding and
+                  Xiangyu Wen and
+                  Yunzhou Zhu and
+                  Yiming Li and
+                  Chris Xiaoxuan Lu},
+  title        = {RadarOcc: Robust 3D Occupancy Prediction with 4D Imaging Radar},
+  journal      = {CoRR},
+  arxiv        = {2405.14014},
+  year         = {2024},
+  preprint     = {true},
+  preview = {radarocc.png},
+  abbr         = {Preprint},
+}
 @article{ding2024thermohands,
   author       = {Fangqiang Ding and
                   Yunzhou Zhu and
