--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,7 +75,7 @@
   year      = {2023},
   arxiv    = {2303.00462},
   code = {https://github.com/Toytiny/CMFlow},
-  website = {https://toytiny.github.io/publication/23-cmflow-cvpr/index.html},
+  website = {https://toytiny.github.io/publication/23-cmflow-cvpr},
   video = {https://www.youtube.com/watch?v=PjKgznDizhI},
   selected = {true},
   abbr = {CVPR'23},
@@ -112,7 +112,7 @@
   preview = {raflow.png},
   code = {https://github.com/Toytiny/RaFlow},
   video = {https://www.youtube.com/watch?v=5_iJCZytrxo},
-  website = {https://toytiny.github.io/publication/22-raflow-ral/index.html},
+  website = {https://toytiny.github.io/publication/22-raflow-ral},
   abbr = {RA-L/IROS}
 }
 @article{DBLP:journals/tie/YeFLDAL22,
