--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -51,19 +51,19 @@
   code = {https://github.com/LJacksonPan/RaTrack},
   preprint = {true},
 }
-@article{DBLP:journals/corr/abs-2306-17010,
+@inproceedings{DBLP:journals/corr/abs-2306-17010,
   author       = {Fangqiang Ding and
                   Zhen Luo and
                   Peijun Zhao and
                   Chris Xiaoxuan Lu},
   title        = {milliFlow: Scene Flow Estimation on mmWave Radar Point Cloud for Human
                   Motion Sensing},
-  journal      = {CoRR},
+  booktitle   = {European Conference on Computer Vision},
   arxiv        = {2306.17010},
-  year         = {2023},
+  year         = {2024},
   preprint     = {true},
   preview = {milliflow.png},
-  abbr         = {Preprint},
+  abbr         = {ECCV'24},
 }
 @inproceedings{DBLP:journals/corr/abs-2303-00462,
   author    = {Fangqiang Ding and
