update about me

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,6 +39,7 @@
   arxiv        = {2306.17010},
   year         = {2024},
   preprint     = {true},
+  selected = {true},
   preview = {milliflow.png},
   abbr         = {ECCV'24},
 }
