--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   journal      = {CoRR},
   arxiv        = {2405.14014},
   year         = {2024},
+  selected = {true},
   preprint     = {true},
   preview = {radarocc.png},
   abbr         = {Preprint},
