--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,20 +1,20 @@
 ---
 ---
 % 2024
-@article{ding2024radarocc,
+@inproceedings{ding2024radarocc,
   author       = {Fangqiang Ding and
                   Xiangyu Wen and
                   Yunzhou Zhu and
                   Yiming Li and
                   Chris Xiaoxuan Lu},
   title        = {RadarOcc: Robust 3D Occupancy Prediction with 4D Imaging Radar},
-  journal      = {CoRR},
+  booktitle   = {Advances in Neural Information Processing Systems},
   arxiv        = {2405.14014},
   year         = {2024},
   selected = {true},
   preprint     = {true},
   preview = {radarocc.png},
-  abbr         = {Preprint},
+  abbr         = {NeurIPS'24},
 }
 @article{ding2024thermohands,
   author       = {Fangqiang Ding and
