--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,6 +38,8 @@
                   Motion Sensing},
   booktitle   = {European Conference on Computer Vision},
   arxiv        = {2306.17010},
+  video        = {https://www.youtube.com/watch?v=fa91EeueGHA},
+  code         = {https://github.com/Toytiny/milliFlow},
   year         = {2024},
   preprint     = {true},
   selected = {true},
