--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,8 @@
   year         = {2024},
   selected = {true},
   preprint     = {true},
+  code = {https://github.com/Toytiny/RadarOcc},
+  video = {https://www.youtube.com/watch?v=sa4gejcWMvk},
   preview = {radarocc.png},
   abbr         = {NeurIPS'24},
 }
