update paper bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,6 +28,8 @@
   arxiv        = {2403.09871},
   year         = {2024},
   preprint     = {true},
+  website = {https://thermohands.github.io/},
+  video = {https://www.youtube.com/watch?v=-oXKspAEyhg},
   preview = {thermohands.png},
   abbr         = {Preprint},
 }
