udpate radarocc web

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,7 @@
   preprint     = {true},
   code = {https://github.com/Toytiny/RadarOcc},
   video = {https://www.youtube.com/watch?v=sa4gejcWMvk},
+  website = {https://toytiny.github.io/publication/24-radarocc-neurips/}
   preview = {radarocc.png},
   abbr         = {NeurIPS'24},
 }
