--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,24 @@
 ---
 ---
+% 2025
+@inproceedings{ding2025thermohands,
+  author       = {Fangqiang Ding and
+                  Yunzhou Zhu and
+                  Xiangyu Wen and
+                  Gaowen Liu and
+                  Chris Xiaoxuan Lu},
+  title        = {ThermoHands: A Benchmark for 3D Hand Pose Estimation from Egocentric Thermal Image},
+  booktitle      = {ACM Conference on Embedded Networked Sensor Systems},
+  arxiv        = {2403.09871},
+  year         = {2025},
+  preprint     = {true},
+  selected = {true},
+  website = {https://thermohands.github.io/},
+  code = {https://github.com/LawrenceZ22/ThermoHands},
+  video = {https://www.youtube.com/watch?v=-oXKspAEyhg},
+  preview = {thermohands.png},
+  abbr         = {Sensys'25},
+}
 % 2024
 @inproceedings{ding2024radarocc,
   author       = {Fangqiang Ding and
@@ -18,21 +37,6 @@
   website = {https://toytiny.github.io/publication/24-radarocc-neurips/},
   preview = {radarocc.png},
   abbr         = {NeurIPS'24},
-}
-@article{ding2024thermohands,
-  author       = {Fangqiang Ding and
-                  Yunzhou Zhu and
-                  Xiangyu Wen and
-                  Chris Xiaoxuan Lu},
-  title        = {ThermoHands: A Benchmark for 3D Hand Pose Estimation from Egocentric Thermal Image},
-  journal      = {CoRR},
-  arxiv        = {2403.09871},
-  year         = {2024},
-  preprint     = {true},
-  website = {https://thermohands.github.io/},
-  video = {https://www.youtube.com/watch?v=-oXKspAEyhg},
-  preview = {thermohands.png},
-  abbr         = {Preprint},
 }
 @inproceedings{DBLP:journals/corr/abs-2306-17010,
   author       = {Fangqiang Ding and
