--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 % 2025
+@inproceedings{sun2025apto,
+  author = {Sun, Qichu and Meng, Rui and Fan, Haishuang and Ding, Fangqiang and Lu, Linxi and Wu, Jingya and Li, Xiaowei and Yan, Guihai},
+  title = {APTO: Accelerating Serialization-Based Point Cloud Transformers with Position-Aware Pruning},
+  year = {2025},
+  booktitle = {Asia and South Pacific Design Automation Conference},
+  abbr         = {ASPDAC'25},
+  preview = {apto.png},
+  pdf = {https://dl.acm.org/doi/10.1145/3658617.3697655},
+  selected = {False}
+}
 @inproceedings{ding2025thermohands,
   author       = {Fangqiang Ding and
                   Yunzhou Zhu and
