update apto web

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   booktitle = {Asia and South Pacific Design Automation Conference},
   abbr         = {ASPDAC'25},
   preview = {apto.png},
-  pdf = {https://dl.acm.org/doi/10.1145/3658617.3697655},
+  pdf = {https://dl.acm.org/doi/pdf/10.1145/3658617.3697655},
+  website = {https://dl.acm.org/doi/10.1145/3658617.3697655},
   selected = {False}
 }
 @inproceedings{ding2025thermohands,
