--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,14 +2,20 @@
 ---
 % 2025
 @misc{an2025dexterous,
-  author = {Shan An and Ziyu Meng and Chao Tang and Yuning Zhou and Tengyu Liu and Fangqiang Ding and Shufang Zhang and Yao Mu and Ran Song and Wei Zhang and Zeng-Guang Hou and Hong Zhang},
-  title = {Dexterous Manipulation through Imitation Learning: A Survey},
-  year = {2025},
+  author       = {Shan An and Ziyu Meng and Chao Tang and Yuning Zhou and Tengyu Liu and Fangqiang Ding and Shufang Zhang and Yao Mu and Ran Song and Wei Zhang and Zeng-Guang Hou and Hong Zhang},
+  title        = {Dexterous Manipulation through Imitation Learning: A Survey},
+  year         = {2025},
+  eprint       = {2504.03515},
+  archivePrefix = {arXiv},
+  primaryClass = {cs.RO},
+  note         = {Preprint},
+  url          = {https://arxiv.org/abs/2504.03515},
+  pdf          = {https://arxiv.org/pdf/2504.03515},
   abbr         = {Preprint},
-  preview = {dexterous.png},
-  pdf = {https://arxiv.org/pdf/2504.03515},
-  selected = {False}
+  preview      = {dexterous.png},
+  selected     = {false}
 }
+
 @inproceedings{sun2025apto,
   author = {Sun, Qichu and Meng, Rui and Fan, Haishuang and Ding, Fangqiang and Lu, Linxi and Wu, Jingya and Li, Xiaowei and Yan, Guihai},
   title = {APTO: Accelerating Serialization-Based Point Cloud Transformers with Position-Aware Pruning},
