--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,18 +1,14 @@
 ---
 ---
 % 2025
-@misc{an2025dexterous,
+@article{an2025dexterous,
   author       = {Shan An and Ziyu Meng and Chao Tang and Yuning Zhou and Tengyu Liu and Fangqiang Ding and Shufang Zhang and Yao Mu and Ran Song and Wei Zhang and Zeng-Guang Hou and Hong Zhang},
   title        = {Dexterous Manipulation through Imitation Learning: A Survey},
   year         = {2025},
-  eprint       = {2504.03515},
-  archivePrefix = {arXiv},
-  primaryClass = {cs.RO},
-  note         = {Preprint},
-  url          = {https://arxiv.org/abs/2504.03515},
   pdf          = {https://arxiv.org/pdf/2504.03515},
   abbr         = {Preprint},
   preview      = {dexterous.png},
+  preprint     = {true},
   selected     = {false}
 }
 
