--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   year         = {2025},
   pdf          = {https://arxiv.org/pdf/2504.03515},
   abbr         = {Preprint},
-  journal      = {Under Review}
+  journal      = {Under Review},
   preview      = {dexterous.png},
   preprint     = {true},
   selected     = {false}
