--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 % 2025
+@inproceedings{ding2025robust,
+  title={Robust Spatial Perception with 4D Radar for Mobile Autonomy},
+  author={Ding, Fangqiang},
+  booktitle={Robotics: Science and Systems-Pioneers Workshop 2025},
+  year = {2025},
+  pdf = {https://openreview.net/pdf?id=sBqpiose0E},
+  abbr = {RSS Pioneers'25},
+  selected = {false},
+  website = {https://sites.google.com/view/rsspioneers2025/participants},
+  video = {https://youtu.be/Ol84t57lY40},
+  preview = {pioneers.png}
+}
 @article{an2025dexterous,
   author       = {Shan An and Ziyu Meng and Chao Tang and Yuning Zhou and Tengyu Liu and Fangqiang Ding and Shufang Zhang and Yao Mu and Ran Song and Wei Zhang and Zeng-Guang Hou and Hong Zhang},
   title        = {Dexterous Manipulation through Imitation Learning: A Survey},
