update rss preview

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @inproceedings{ding2025robust,
   title={Robust Spatial Perception with 4D Radar for Mobile Autonomy},
   author={Ding, Fangqiang},
-  booktitle={Robotics: Science and Systems-Pioneers Workshop 2025},
+  booktitle={Robotics: Science and Systems-Pioneers Workshop},
   year = {2025},
   pdf = {https://openreview.net/pdf?id=sBqpiose0E},
   abbr = {RSS Pioneers'25},
