update bib and misc

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 % 2025
+@article{zhang2025scoredetr,
+  author       = {Zhang, Boyuan and Zhang, Fukai and An, Shan and Ding, Fangqiang and Liang, Yu and Lyu, Qiang},
+  title        = {SCORE-DETR: An efficient Transformer-based network for small and occluded citrus detection},
+  year         = {2025},
+  pdf          = {https://www.sciencedirect.com/science/article/pii/S0168169925009494?casa_token=Zr3vKBYoPMwAAAAA:5vjMI9CmrtMMbHkWLl3GKxW_yy2VG3Yn1A61rAHyP2522eInF2m2KErDccJ6NyAFDfjTfTIx},
+  abbr         = {CEA},
+  journal      = {Computers and Electronics in Agriculture},
+  preview      = {scoredetr.png},
+  preprint     = {false},
+  selected     = {false}
+}
+
 @inproceedings{ding2025robust,
   title={Robust Spatial Perception with 4D Radar for Mobile Autonomy},
   author={Ding, Fangqiang},
