--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,8 +9,8 @@
   abbr         = {CEA},
   journal      = {Computers and Electronics in Agriculture},
   preview      = {scoredetr.png},
-  preprint     = {false},
-  selected     = {false}
+  selected     = {false},
+  website      = {https://www.sciencedirect.com/science/article/abs/pii/S0168169925009494#:~:text=We%20present%20SCORE%2DDETR%2C%20an,distinguishing%20target%20objects%20from%20backgrounds.}
 }
 
 @inproceedings{ding2025robust,
