--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -120,12 +120,11 @@
   year={2024},
   booktitle={{IEEE} International Conference on Robotics and Automation},
   arxiv = {2309.09737},
-  selected = {true},
+  selected = {false},
   video = {https://www.youtube.com/watch?v=IxfyCWyNhfw},
   code = {https://github.com/LJacksonPan/RaTrack},
   preprint = {true},
 }
-
 @inproceedings{DBLP:journals/corr/abs-2303-00462,
   author    = {Fangqiang Ding and
                Andras Palffy and
@@ -169,7 +168,7 @@
   journal   = {{IEEE} Robotics Autom. Lett. / IEEE International Conference on Intelligent Robots and Systems},
   year      = {2022},
   arxiv    = {2203.01137},
-  selected = {true},
+  selected = {false},
   preview = {raflow.png},
   code = {https://github.com/Toytiny/RaFlow},
   video = {https://www.youtube.com/watch?v=5_iJCZytrxo},
