--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 % 2025
+@article{fan2025m4human,
+  author       = {Junqiao Fan and Yunjiao Zhou and Yizhuo Yang and Xinyuan Cui and Jiarui Zhang and 
+                  Lihua Xie and Jianfei Yang and Chris Xiaoxuan Lu and Fangqiang Ding},
+  title        = {M4Human: A Large-Scale Multimodal mmWave Radar Benchmark for Human Mesh Reconstruction},
+  year         = {2025},
+  pdf          = {https://arxiv.org/pdf/2512.12378},
+  abbr         = {Preprint},
+  journal      = {Under Review},
+  preview      = {m4human.png},
+  preprint     = {true},
+  selected     = {false}
+}
 @article{zhang2025scoredetr,
   author       = {Zhang, Boyuan and Zhang, Fukai and An, Shan and Ding, Fangqiang and Liang, Yu and Lyu, Qiang},
   title        = {SCORE-DETR: An efficient Transformer-based network for small and occluded citrus detection},
@@ -31,7 +43,7 @@
   year         = {2025},
   pdf          = {https://arxiv.org/pdf/2504.03515},
   abbr         = {Preprint},
-  journal      = {Under Review},
+  journal      = {IEEE Transactions on Automation Science and Engineering},
   preview      = {dexterous.png},
   preprint     = {true},
   selected     = {false}
