--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,19 @@
   journal      = {Under Review},
   preview      = {m4human.png},
   preprint     = {true},
+  website      = {https://fanjunqiao.github.io/M4Human-site/},
+  selected     = {false}
+}
+@article{borreda2025radargen,
+  author       = {Tomer Borreda and Fangqiang Ding and Sanja Fidler and Shengyu Huang and Or Litany},
+  title        = {RadarGen: Automotive Radar Point Cloud Generation from Cameras},
+  year         = {2025},
+  pdf          = {https://arxiv.org/pdf/2512.12378},
+  abbr         = {Preprint},
+  journal      = {Under Review},
+  preview      = {radargen.png},
+  preprint     = {true},
+  website      = {https://radargen.github.io/},
   selected     = {false}
 }
 @article{zhang2025scoredetr,
