--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -55,7 +55,7 @@
   title        = {Dexterous Manipulation through Imitation Learning: A Survey},
   year         = {2025},
   pdf          = {https://arxiv.org/pdf/2504.03515},
-  abbr         = {Preprint},
+  abbr         = {TASE},
   journal      = {IEEE Transactions on Automation Science and Engineering},
   preview      = {dexterous.png},
   preprint     = {true},
