--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,17 @@
   website      = {https://fanjunqiao.github.io/M4Human-site/},
   selected     = {false}
 }
+@article{fan2025m4human,
+  author       = {Runwei Guan, Jianan Liu, Shaofeng Liang, Fangqiang Ding, Shanliang Yao, Xiaokai Bai, Daizong Liu, Tao Huang, Guoqiang Mao, Hui Xiong},
+  title        = {Wavelet-based Multi-View Fusion of 4D Radar Tensor and Camera for Robust 3D Object Detection},
+  year         = {2025},
+  pdf          = {https://arxiv.org/pdf/2512.22972},
+  abbr         = {Preprint},
+  journal      = {Under Review},
+  preview      = {wrcformer.png},
+  preprint     = {true},
+  selected     = {false}
+}
 @article{borreda2025radargen,
   author       = {Tomer Borreda and Fangqiang Ding and Sanja Fidler and Shengyu Huang and Or Litany},
   title        = {RadarGen: Automotive Radar Point Cloud Generation from Cameras},
