--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,10 +12,10 @@
   preview      = {m4human.png},
   preprint     = {true},
   website      = {https://fanjunqiao.github.io/M4Human-site/},
-  selected     = {false}
+  selected     = {true}
 }
 @article{fan2025m4human,
-  author       = {Runwei Guan, Jianan Liu, Shaofeng Liang, Fangqiang Ding, Shanliang Yao, Xiaokai Bai, Daizong Liu, Tao Huang, Guoqiang Mao, Hui Xiong},
+  author       = {Runwei Guan and Jianan Liu and Shaofeng Liang and Fangqiang Ding and Shanliang Yao and Xiaokai Bai and Daizong Liu and Tao Huang and Guoqiang Mao and Hui Xiong},
   title        = {Wavelet-based Multi-View Fusion of 4D Radar Tensor and Camera for Robust 3D Object Detection},
   year         = {2025},
   pdf          = {https://arxiv.org/pdf/2512.22972},
