--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,24 @@
 ---
 ---
 % 2025
-@article{fan2025m4human,
+@article{liu2026palm,
+  author       = {Yuanzhe Liu and Jingyuan Zhu and Yuchen Mo and Gen Li and Xu Cao
+                  and Jin Jin and Yifan Shen and Zhengyuan Li and Tianjiao Yu and 
+                  Wenzhen Yuan and Fangqiang Ding† and Ismini Lourentzou†},
+  title        = {PALM: Progress-Aware Policy Learning via Affordance Reasoning for Long-Horizon Robotic Manipulation},
+  year         = {2026},
+  pdf          = {https://arxiv.org/pdf/2601.07060},
+  abbr         = {Preprint},
+  journal      = {Under Review},
+  preview      = {palm.png},
+  preprint     = {true},
+  selected     = {false}
+}
+@article{fan2026m4human,
   author       = {Junqiao Fan and Yunjiao Zhou and Yizhuo Yang and Xinyuan Cui and Jiarui Zhang and 
-                  Lihua Xie and Jianfei Yang and Chris Xiaoxuan Lu and Fangqiang Ding},
+                  Lihua Xie and Jianfei Yang and Chris Xiaoxuan Lu and Fangqiang Ding†},
   title        = {M4Human: A Large-Scale Multimodal mmWave Radar Benchmark for Human Mesh Reconstruction},
-  year         = {2025},
+  year         = {2026},
   pdf          = {https://arxiv.org/pdf/2512.12378},
   abbr         = {Preprint},
   journal      = {Under Review},
@@ -15,10 +28,10 @@
   code         = {https://github.com/FanJunqiao/M4Human},
   selected     = {true}
 }
-@article{fan2025m4human,
+@article{fan2026m4human,
   author       = {Runwei Guan and Jianan Liu and Shaofeng Liang and Fangqiang Ding and Shanliang Yao and Xiaokai Bai and Daizong Liu and Tao Huang and Guoqiang Mao and Hui Xiong},
   title        = {Wavelet-based Multi-View Fusion of 4D Radar Tensor and Camera for Robust 3D Object Detection},
-  year         = {2025},
+  year         = {2026},
   pdf          = {https://arxiv.org/pdf/2512.22972},
   abbr         = {Preprint},
   journal      = {Under Review},
@@ -26,10 +39,10 @@
   preprint     = {true},
   selected     = {false}
 }
-@article{borreda2025radargen,
+@article{borreda2026radargen,
   author       = {Tomer Borreda and Fangqiang Ding and Sanja Fidler and Shengyu Huang and Or Litany},
   title        = {RadarGen: Automotive Radar Point Cloud Generation from Cameras},
-  year         = {2025},
+  year         = {2026},
   pdf          = {https://arxiv.org/pdf/2512.17897},
   abbr         = {Preprint},
   journal      = {Under Review},
