--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,17 @@
 ---
 ---
+% 2026
+@article{xiao2026hyperdet,
+  author       = {Yichun Xiao and Runwei Guan and Fangqiang Ding},
+  title        = {HyperDet: 3D Object Detection with Hyper 4D Radar Point Clouds},
+  year         = {2026},
+  pdf          = {https://arxiv.org/pdf/2602.11554},
+  abbr         = {Preprint},
+  journal      = {Under Review},
+  preview      = {hyperdet.png},
+  preprint     = {true},
+  selected     = {false}
+}
 % 2025
 @article{liu2026palm,
   author       = {Yuanzhe Liu and Jingyuan Zhu and Yuchen Mo and Gen Li and Xu Cao
