--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,27 +13,27 @@
   selected     = {false}
 }
 % 2025
-@article{liu2026palm,
+@inproceedings{liu2026palm,
   author       = {Yuanzhe Liu and Jingyuan Zhu and Yuchen Mo and Gen Li and Xu Cao
                   and Jin Jin and Yifan Shen and Zhengyuan Li and Tianjiao Yu and 
                   Wenzhen Yuan and Fangqiang Ding† and Ismini Lourentzou†},
   title        = {PALM: Progress-Aware Policy Learning via Affordance Reasoning for Long-Horizon Robotic Manipulation},
   year         = {2026},
   pdf          = {https://arxiv.org/pdf/2601.07060},
-  abbr         = {Preprint},
-  journal      = {Under Review},
+  abbr         = {CVPR'26},
+  booktitle    = {IEEE/CVF Conference on Computer Vision and Pattern Recognition}
   preview      = {palm.png},
   preprint     = {true},
   selected     = {false}
 }
-@article{fan2026m4human,
+@inproceedings{fan2026m4human,
   author       = {Junqiao Fan and Yunjiao Zhou and Yizhuo Yang and Xinyuan Cui and Jiarui Zhang and 
                   Lihua Xie and Jianfei Yang and Chris Xiaoxuan Lu and Fangqiang Ding†},
   title        = {M4Human: A Large-Scale Multimodal mmWave Radar Benchmark for Human Mesh Reconstruction},
   year         = {2026},
   pdf          = {https://arxiv.org/pdf/2512.12378},
-  abbr         = {Preprint},
-  journal      = {Under Review},
+  abbr         = {CVPR'26},
+  booktitle    = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   preview      = {m4human.png},
   preprint     = {true},
   website      = {https://fanjunqiao.github.io/M4Human-site/},
