--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
   year         = {2026},
   pdf          = {https://arxiv.org/pdf/2601.07060},
   abbr         = {CVPR'26},
-  booktitle    = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  booktitle    = {IEEE Conference on Computer Vision and Pattern Recognition},
   preview      = {palm.png},
   preprint     = {true},
   selected     = {false}
@@ -33,7 +33,7 @@
   year         = {2026},
   pdf          = {https://arxiv.org/pdf/2512.12378},
   abbr         = {CVPR'26},
-  booktitle    = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  booktitle    = {IEEE Conference on Computer Vision and Pattern Recognition},
   preview      = {m4human.png},
   preprint     = {true},
   website      = {https://fanjunqiao.github.io/M4Human-site/},
