--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,18 +1,7 @@
 ---
 ---
 % 2026
-@article{xiao2026hyperdet,
-  author       = {Yichun Xiao and Runwei Guan and Fangqiang Ding},
-  title        = {HyperDet: 3D Object Detection with Hyper 4D Radar Point Clouds},
-  year         = {2026},
-  pdf          = {https://arxiv.org/pdf/2602.11554},
-  abbr         = {Preprint},
-  journal      = {Under Review},
-  preview      = {hyperdet.png},
-  preprint     = {true},
-  selected     = {false}
-}
-% 2025
+
 @inproceedings{liu2026palm,
   author       = {Yuanzhe Liu and Jingyuan Zhu and Yuchen Mo and Gen Li and Xu Cao
                   and Jin Jin and Yifan Shen and Zhengyuan Li and Tianjiao Yu and 
@@ -40,7 +29,18 @@
   code         = {https://github.com/FanJunqiao/M4Human},
   selected     = {true}
 }
-@article{fan2026m4human,
+@article{xiao2026hyperdet,
+  author       = {Yichun Xiao and Runwei Guan and Fangqiang Ding},
+  title        = {HyperDet: 3D Object Detection with Hyper 4D Radar Point Clouds},
+  year         = {2026},
+  pdf          = {https://arxiv.org/pdf/2602.11554},
+  abbr         = {Preprint},
+  journal      = {Under Review},
+  preview      = {hyperdet.png},
+  preprint     = {true},
+  selected     = {false}
+}
+@article{guan2026wavelet,
   author       = {Runwei Guan and Jianan Liu and Shaofeng Liang and Fangqiang Ding and Shanliang Yao and Xiaokai Bai and Daizong Liu and Tao Huang and Guoqiang Mao and Hui Xiong},
   title        = {Wavelet-based Multi-View Fusion of 4D Radar Tensor and Camera for Robust 3D Object Detection},
   year         = {2026},
@@ -63,6 +63,7 @@
   website      = {https://radargen.github.io/},
   selected     = {false}
 }
+
 @article{zhang2025scoredetr,
   author       = {Zhang, Boyuan and Zhang, Fukai and An, Shan and Ding, Fangqiang and Liang, Yu and Lyu, Qiang},
   title        = {SCORE-DETR: An efficient Transformer-based network for small and occluded citrus detection},
